	New form #2: after the 3.14, an even number is a stable version 
	whereas an odd number is an unstable/devel version.
	New form #3: tilp (cables, calcs, tiffep) version.

To do:
      UTF8 encoding pbs with gtk_refresh (label) under Windows.

- 08/04/2004, version 6.71 (3.8.1, 0.5.8, 4.5.3): roms
        Redirection of stdout/stderr by callbacks and minor improvements.
	
- 24/03/2004, version 6.70 (3.8.0, 0.5.7, 4.5.2): roms
	Added menu entry and mime types for KDE & Gnome.
	Bug fix: creation of the '/usr/lib/tilp' directory.
	Note: --enable-exit-homedir is on now !
	Bug: gdk_pixbuf_save requires error to be set on NULL.
	Added access to log file from menu.
	GUI clean-up.
	configure.in requires latest versions for _all_ libs. To be sure !
	
- 17/03/2004, version 6.69 (3.7.6, 0.5.6, 4.5.2): roms
	Use new libticalcs (removed GLib dependancies) thus libticalcs-4 is no 
	longer needed.
	We were using dirlist in v1 mode due to memory corruption.
	Fixed in dirlist_v1_to_v2: XXXX_NODE_NAME was not duplicated by 
	malloc. This is the reason why dirlist v1=>2 was buggy !
	Dirlist v2 is ok.
	
- 27/08/2003, version 6.68: Maintenance release by JB.
	Upgraded to libtool 1.5
	Upgraded to automake 1.7
	Fixed registry location on UNIX : sysconfdir
	Fixed potfiles generation

- 19/05/2003, version 6.67-beta3 (3.7.6, 0.5.6, 4.5.0):
	French html manual added.
	
- 15/05/2003, version 6.67-beta2 (3.7.6, 0.5.6, 4.5.0):
	Beta release of the Windows version on ticalc.org.
	
- 09/05/2003, version 6.68 (3.7.6, 0.5.6, 4.4.9):
	Re-enabled mfc folder for SVN repository.
	Rebuilt under Win32.
	Fixed "Invalid UTF-8 ..." strings appearing in DOS box and some bug
	fixes.
	
- 04/05/2003, version 6.67-beta1:
	Beta release of the Linux version on ticalc.org.

- 03/05/2003, version 6.67 (3.7.6, 0.5.6, 4.4.9):
	Bug fix in the screenshot box (fsel box displayed while connection
	failed).
	Statusbar updated to new callback.
	mkdir: utf8 to locale conversion (the GLib function seems not to