@@ -14,6 +14,8 @@ To do:
 
 - 08/04/2004, version 6.71 (3.8.1, 0.5.8, 4.5.3): roms
         Redirection of stdout/stderr by callbacks and minor improvements.
+		Timeout has been increased to 30s instead of 10s during FLASH apps/os sending
+		to avoid garbage collection.
 	
 - 24/03/2004, version 6.70 (3.8.0, 0.5.7, 4.5.2): roms
 	Added menu entry and mime types for KDE & Gnome.
